--- a/responsive.css
+++ b/responsive.css
@@ -177,6 +177,15 @@
     }
 
     /* END OF FOOTERS */
+
+
+    /* COPYRIGHT */
+    #copyright .container .row .col-md-4 p {
+        margin-top: 0rem !important;
+        padding: .7rem 0;
+    }
+
+    /* END COPYRIGHT */
 }
 
 
@@ -209,6 +218,12 @@
         border-radius: 24px;
         overflow: hidden;
         width: 48%;
+        transition: .5s;
+    }
+
+    #contents .container .row .bussiness:hover {
+        transform: translateY(-3rem);
+        box-shadow: 1px 1px 20px rgba(0, 0, 0, 0.3);
     }
 
     #contents .container .row .bussiness p {
@@ -220,6 +235,12 @@
         border-radius: 24px;
         width: 48%;
         margin-top: 0;
+        transition: .5s;
+    }
+
+    #contents .container .row .security:hover {
+        transform: translateY(-3rem);
+        box-shadow: 1px 1px 20px rgba(0, 0, 0, 0.3);
     }
 
     #contents .container .row .security .circle {
@@ -338,6 +359,14 @@
     }
 
     /* END OF FOOTERS */
+
+    /* COPYRIGHT */
+    #copyright .container .row .col-md-4 p {
+        margin-top: .2rem !important;
+        padding: .7rem 0;
+    }
+
+    /* END COPYRIGHT */
 }
 
 
