--- a/responsive.css
+++ b/responsive.css
@@ -50,7 +50,7 @@
     }
 
     #contents .container .row .security .security-paragraph {
-        padding: 0 1.2rem;
+        padding: 0 1.2rem !important;
     }
 
     /* END OF CONTENT */
@@ -118,7 +118,7 @@
     }
 
     #contents .container .row .security .security-paragraph {
-        padding: 0 2rem;
+        padding: 0 2rem !important;
     }
 
     /* AKHIR CONTENT */
