give animation to message notification

--- a/animation.css
+++ b/animation.css
@@ -9,3 +9,12 @@
     }
 }
 /* END OF NAVBAR */
+
+
+/* MESSAGE */
+@keyframes messageAnimation {
+    to {
+        transform: translateX(0);
+    }
+}
+/* END OF MESSAGE */
