change name of comment

--- a/style.css
+++ b/style.css
@@ -58,7 +58,7 @@ body {
 
 }
 
-/* AKHIR NAVBAR */
+/* END OF NAVBAR */
 
 
 /* HEADER */
@@ -101,7 +101,7 @@ body {
     color: #5E6382;
 }
 
-/* AKHIR HEADER */
+/* END OF HEADER */
 
 
 /* CONTENTS */
