--- a/responsive.css
+++ b/responsive.css
@@ -10,6 +10,10 @@
         padding: 0;
     }
 
+    .navbar .logo-whatsApp {
+        display: none;
+    }
+
     /* END OF NAVBAR */
 
 
@@ -244,6 +248,17 @@
 /* // Large devices (desktops, 992px and up) */
 @media (min-width: 992px) {
 
+    /* NAVBAR */
+    .navbar .navbar-brand {
+        display: none;
+    }
+
+    .navbar .logo-whatsApp {
+        display: block;
+    }
+
+    /* END OF NAVBAR */
+
     /* HEADER */
     #header {
         margin-top: 5rem;
@@ -392,6 +407,17 @@
 
 /* // X-Large devices (large desktops, 1200px and up) */
 @media (min-width: 1200px) {
+
+    /* NAVBAR */
+    .navbar .navbar-brand {
+        display: block;
+    }
+
+    .navbar .logo-whatsApp {
+        display: none;
+    }
+
+    /* END OF NAVBAR */
 
     /* HEADER */
     #header {
